unpackaged/main/default/objects/Account/fields/B2C_ClientBinding__c.field-meta.xml
<CustomField>
    <fullName>B2C_ClientBinding__c</fullName>
    <formula>FirstName + LastName + PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2C_ClientBinding</label>
    <type>Text</type>
</CustomField>