unpackaged/main/default/objects/Account/fields/Client_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Formula__c</fullName>
    <formula>Text(Salutation) &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>