unpackaged/main/default/objects/Account/fields/Contactable__c.field-meta.xml
<CustomField>
    <fullName>Contactable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact is contactable on at least 1 channel</description>
    <label>Contactable</label>
    <type>Checkbox</type>
</CustomField>