unpackaged/main/default/objects/Account/fields/FAI__c.field-meta.xml
<CustomField>
    <fullName>FAI__c</fullName>
    <formula>SUBSTITUTE(PersonEmail, LEFT(PersonEmail, FIND(&quot;@&quot;,PersonEmail)),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAI</label>
    <type>Text</type>
</CustomField>