unpackaged/main/default/objects/Account/fields/Gifted__c.field-meta.xml
<CustomField>
    <fullName>Gifted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gifted</label>
    <type>Checkbox</type>
</CustomField>