unpackaged/main/default/objects/Account/fields/Is_in_My_Clients__c.field-meta.xml
<CustomField>
    <fullName>Is_in_My_Clients__c</fullName>
    <formula>ClientAdvisor__pc   =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in My Clients</label>
    <type>Checkbox</type>
</CustomField>