unpackaged/main/default/objects/Account/fields/IsEmailChecked__c.field-meta.xml
<CustomField>
    <fullName>IsEmailChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Checked</label>
    <type>Checkbox</type>
</CustomField>