unpackaged/main/default/objects/Account/fields/IsPhoneChecked__c.field-meta.xml
<CustomField>
    <fullName>IsPhoneChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Phone Checked</label>
    <type>Checkbox</type>
</CustomField>