unpackaged/main/default/objects/Account/fields/isPurged__c.field-meta.xml
<CustomField>
    <fullName>isPurged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Purged</label>
    <type>Checkbox</type>
</CustomField>