unpackaged/main/default/objects/Account/fields/IsVic__c.field-meta.xml
<CustomField>
    <fullName>IsVic__c</fullName>
    <formula>IF(
    LifeTimePurchaseAmount__pc &gt;= 5000,
    True,
    False
)</formula>
    <label>IsVic</label>
    <type>Checkbox</type>
</CustomField>