unpackaged/main/default/objects/Account/fields/Itelios_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Itelios_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Itelios External Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>