unpackaged/main/default/objects/Account/fields/Last_NPS_score__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_score__c</fullName>
    <label>Last NPS score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>