unpackaged/main/default/objects/Account/fields/LastUpdateOptinCGI__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinCGI__c</fullName>
    <label>Last Update Optin CGI</label>
    <type>DateTime</type>
</CustomField>