unpackaged/main/default/objects/Account/fields/LastUpdateOptinMarketingPartners__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOptinMarketingPartners__c</fullName>
    <label>Last Update Optin Marketing Partners</label>
    <type>DateTime</type>
</CustomField>