unpackaged/main/default/objects/Account/fields/LifetimePurchaseAmountCustomization__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountCustomization__c</fullName>
    <label>Lifetime Purchase Amount Customization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>