unpackaged/main/default/objects/Account/fields/LifetimePurchaseAmountLifestyle__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountLifestyle__c</fullName>
    <label>Lifetime Purchase Amount Lifestyle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>