unpackaged/main/default/objects/Account/fields/LifetimePurchaseAmountLifetime__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountLifetime__c</fullName>
    <label>Lifetime Purchase Amount Lifetime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>