unpackaged/main/default/objects/Account/fields/LifetimePurchaseAmountReturn__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountReturn__c</fullName>
    <label>Lifetime Purchase Amount Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>