unpackaged/main/default/objects/Account/fields/LifetimePurchaseAmountSale__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountSale__c</fullName>
    <label>Lifetime Purchase Amount Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>