unpackaged/main/default/objects/Account/fields/LifetimePurchaseAmountStore__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountStore__c</fullName>
    <label>Lifetime Purchase Amount Store</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>