unpackaged/main/default/objects/Account/fields/LifetimePurchaseAmountWeb__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountWeb__c</fullName>
    <label>Lifetime Purchase Amount Web</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>