unpackaged/main/default/objects/Account/fields/LiveChatOrigin__c.field-meta.xml
<CustomField>
    <fullName>LiveChatOrigin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Chat Origin</label>
    <type>Checkbox</type>
</CustomField>