unpackaged/main/default/objects/Account/fields/Local_equals_Main_CA__c.field-meta.xml
<CustomField>
    <fullName>Local_equals_Main_CA__c</fullName>
    <formula>IF( Local_Main_CA__c =  ClientAdvisor__pc, &#39;true&#39;, &#39;false&#39;)</formula>
    <label>Local = Main CA</label>
    <type>Text</type>
</CustomField>