unpackaged/main/default/objects/Account/fields/Local_equals_Main_Store__c.field-meta.xml
<CustomField>
    <fullName>Local_equals_Main_Store__c</fullName>
    <formula>IF(Local_Main_Store__c =  MainStore__pc, &#39;true&#39;, &#39;false&#39;)</formula>
    <label>Local = Main Store</label>
    <type>Text</type>
</CustomField>