unpackaged/main/default/objects/Account/fields/Local_Main_CA__c.field-meta.xml
<CustomField>
    <fullName>Local_Main_CA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reconnect with locals</description>
    <label>Local Main CA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>