unpackaged/main/default/objects/Account/fields/Local_Main_Store__c.field-meta.xml
<CustomField>
    <fullName>Local_Main_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reconnect with locals</description>
    <label>Local Main Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>