unpackaged/main/default/objects/Account/fields/Local_Main_Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Main_Store_Code__c</fullName>
    <formula>Local_Main_Store__r.SourceStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Main Store Code</label>
    <type>Text</type>
</CustomField>