unpackaged/main/default/objects/Account/fields/MainBoutiqueCode__c.field-meta.xml
<CustomField>
    <fullName>MainBoutiqueCode__c</fullName>
    <formula>MainStore__pr.SourceStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Boutique Code</label>
    <type>Text</type>
</CustomField>