unpackaged/main/default/objects/Account/fields/Max_Year_ClientSource__c.field-meta.xml
<CustomField>
    <fullName>Max_Year_ClientSource__c</fullName>
    <label>Max Year ClientSource</label>
    <summarizedField>ClientSource__c.SourceCreationDate__c</summarizedField>
    <summaryForeignKey>ClientSource__c.Client__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>