unpackaged/main/default/objects/Account/fields/Min_Year_Client_Source__c.field-meta.xml
<CustomField>
    <fullName>Min_Year_Client_Source__c</fullName>
    <label>Min Year Client Source</label>
    <summarizedField>ClientSource__c.SourceCreationDate__c</summarizedField>
    <summaryForeignKey>ClientSource__c.Client__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>