unpackaged/main/default/objects/Account/fields/nb_Client_Sources__c.field-meta.xml
<CustomField>
    <fullName>nb_Client_Sources__c</fullName>
    <description>Calculate the number of client source records associated to this client Recourd</description>
    <label># Client Sources</label>
    <summaryForeignKey>ClientSource__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>