unpackaged/main/default/objects/Account/fields/NbOfClientAddresses__c.field-meta.xml
<CustomField>
    <fullName>NbOfClientAddresses__c</fullName>
    <label># of Client Addresses</label>
    <summaryForeignKey>ClientAddress__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>