unpackaged/main/default/objects/Account/fields/NewPhone__c.field-meta.xml
<CustomField>
    <fullName>NewPhone__c</fullName>
    <label>New Phone</label>
    <type>Phone</type>
</CustomField>