unpackaged/main/default/objects/Account/fields/NewWeChatClient__c.field-meta.xml
<CustomField>
    <fullName>NewWeChatClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New WeChat Client</label>
    <type>Checkbox</type>
</CustomField>