unpackaged/main/default/objects/Account/fields/OldNoteComboRuleCompleted__c.field-meta.xml
<CustomField>
    <fullName>OldNoteComboRuleCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Note Combo Rule Completed</label>
    <type>Checkbox</type>
</CustomField>