unpackaged/main/default/objects/Account/fields/OptinCGI__c.field-meta.xml
<CustomField>
    <fullName>OptinCGI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin CGI</label>
    <type>Checkbox</type>
</CustomField>