unpackaged/main/default/objects/Account/fields/OptinMarketingPartner__c.field-meta.xml
<CustomField>
    <fullName>OptinMarketingPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Marketing Partner</label>
    <type>Checkbox</type>
</CustomField>