unpackaged/main/default/objects/Account/fields/OriginStoreCode__c.field-meta.xml
<CustomField>
    <fullName>OriginStoreCode__c</fullName>
    <formula>OriginStore__pr.SourceStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Store Code</label>
    <type>Text</type>
</CustomField>