unpackaged/main/default/objects/Account/fields/Other_sources_ID__c.field-meta.xml
<CustomField>
    <fullName>Other_sources_ID__c</fullName>
    <description>For DDC / WeChat</description>
    <label>Other sources ID</label>
    <type>TextArea</type>
</CustomField>