unpackaged/main/default/objects/Account/fields/OtherPhone2__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone2__c</fullName>
    <label>Other Phone 2</label>
    <type>Phone</type>
</CustomField>