unpackaged/main/default/objects/Account/fields/PDUE_InternalId__c.field-meta.xml
<CustomField>
    <fullName>PDUE_InternalId__c</fullName>
    <label>PDUE InternalId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>