unpackaged/main/default/objects/Account/fields/Super_Main_CA_SFID__c.field-meta.xml
<CustomField>
    <fullName>Super_Main_CA_SFID__c</fullName>
    <formula>IF( ISBLANK( Local_Main_CA__c ) ,  ClientAdvisor__pc ,  Local_Main_CA__c )</formula>
    <label>Super Main CA SFID</label>
    <type>Text</type>
</CustomField>