unpackaged/main/default/objects/Account/fields/Targeted_CAreattribution_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Targeted_CAreattribution_Contact_Date__c</fullName>
    <label>Targeted CAreattribution Contact Date</label>
    <type>Date</type>
</CustomField>