unpackaged/main/default/objects/Account/fields/Targeted_Customers__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Targeted Customers</label>
    <type>Checkbox</type>
</CustomField>