unpackaged/main/default/objects/Account/fields/Targeted_Customers_CAreattribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Customers_CAreattribution_Date__c</fullName>
    <label>Targeted Customers CAreattribution Date</label>
    <type>Date</type>
</CustomField>