unpackaged/main/default/objects/Account/fields/Targeted_Customers_CAreattribution_Notif__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Customers_CAreattribution_Notif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Targeted Customers CAreattribution Notif</label>
    <type>Checkbox</type>
</CustomField>