unpackaged/main/default/objects/Account/fields/Targeted_Customers_HP__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Customers_HP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Targeted Customers HP</label>
    <type>Checkbox</type>
</CustomField>