unpackaged/main/default/objects/Account/fields/TechCountSource__c.field-meta.xml
<CustomField>
    <fullName>TechCountSource__c</fullName>
    <label>TechCountSource</label>
    <summaryFilterItems>
        <field>ClientSource__c.Source__c</field>
        <operation>notEqual</operation>
        <value>SF</value>
    </summaryFilterItems>
    <summaryForeignKey>ClientSource__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>