unpackaged/main/default/objects/Account/fields/TechOtherEmail__c.field-meta.xml
<CustomField>
    <fullName>TechOtherEmail__c</fullName>
    <formula>OtherEmail__pc</formula>
    <label>TechOtherEmail</label>
    <type>Text</type>
</CustomField>