unpackaged/main/default/objects/Account/fields/wechat_digitalcard__c.field-meta.xml
<CustomField>
    <fullName>wechat_digitalcard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WeChat DigitalCard</label>
    <type>Checkbox</type>
</CustomField>