unpackaged/main/default/objects/Account/fields/wechat_follower__c.field-meta.xml
<CustomField>
    <fullName>wechat_follower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WeChat Follower</label>
    <type>Checkbox</type>
</CustomField>