unpackaged/main/default/objects/Account/fields/wechat_image__c.field-meta.xml
<CustomField>
    <fullName>wechat_image__c</fullName>
    <formula>IMAGE( wechat_image_url__c ,&quot;avatar&quot; , 200, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wechat image</label>
    <type>Text</type>
</CustomField>