unpackaged/main/default/objects/Account/fields/wechat_image_url__c.field-meta.xml
<CustomField>
    <fullName>wechat_image_url__c</fullName>
    <label>wechat image url</label>
    <type>Url</type>
</CustomField>