unpackaged/main/default/objects/Account/fields/wechat_nickname__c.field-meta.xml
<CustomField>
    <fullName>wechat_nickname__c</fullName>
    <label>WeChat Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>