unpackaged/main/default/objects/Account/fields/wechat_union_id__c.field-meta.xml
<CustomField>
    <fullName>wechat_union_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Wechat Union Id</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>