unpackaged/main/default/objects/Account/fields/What_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_interested_in__c</fullName>
    <label>What are you interested in ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Brand heritage</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>New launch</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Personalization</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Collaboration</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>