unpackaged/main/default/objects/Account/validationRules/RV_SFSC_CannotModifyAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_SFSC_CannotModifyAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CONTAINS($UserRole.Name, &quot;CS&quot;),
TechCountSource__c &gt;= 1
)</errorConditionFormula>
    <errorMessage>You cannot edit the this account because it has been merged with another system.</errorMessage>
</ValidationRule>