unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>UCRInternalId__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ClientType__pc</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>LightCurrentCluster__pc</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Country__pc</columns>
    <columns>Nationality__pc</columns>
    <columns>ClientAdvisorId__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notEqual</operation>
        <value>rcuint</value>
    </filters>
    <filters>
        <field>Country__pc</field>
        <operation>equals</operation>
        <value>FRA</value>
    </filters>
    <label>All Clients</label>
</ListView>